--- a/AdventOfCode/AdventOfCode.xcodeproj/xcshareddata/xcschemes/Year2019.xcscheme
+++ b/AdventOfCode/AdventOfCode.xcodeproj/xcshareddata/xcschemes/Year2019.xcscheme
@@ -30,7 +30,9 @@
       codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D5E3CB102397ABCB00D39B5D"
