Code clean up and fixes for latest xcode

--- a/AdventOfCode/AdventOfCode.xcodeproj/xcshareddata/xcbaselines/2E99D593256D3DC600088D9C.xcbaseline/Info.plist
+++ b/AdventOfCode/AdventOfCode.xcodeproj/xcshareddata/xcbaselines/2E99D593256D3DC600088D9C.xcbaseline/Info.plist
@@ -4,6 +4,30 @@
 <dict>
 	<key>runDestinationsByUUID</key>
 	<dict>
+		<key>291ECE30-1CA8-44EA-B0FC-7C37C2919374</key>
+		<dict>
+			<key>localComputer</key>
+			<dict>
+				<key>busSpeedInMHz</key>
+				<integer>0</integer>
+				<key>cpuCount</key>
+				<integer>1</integer>
+				<key>cpuKind</key>
+				<string>Apple M1</string>
+				<key>cpuSpeedInMHz</key>
+				<integer>0</integer>
+				<key>logicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>modelCode</key>
+				<string>Macmini9,1</string>
+				<key>physicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.macosx</string>
+			</dict>
+			<key>targetArchitecture</key>
+			<string>arm64</string>
+		</dict>
 		<key>FB4D02AB-E819-4ADF-B02C-FEBF078229B0</key>
 		<dict>
 			<key>localComputer</key>
