--- a/AdventOfCode/AdventOfCode.xcodeproj/xcshareddata/xcbaselines/D536CD11274E25D200D20509.xcbaseline/Info.plist
+++ b/AdventOfCode/AdventOfCode.xcodeproj/xcshareddata/xcbaselines/D536CD11274E25D200D20509.xcbaseline/Info.plist
@@ -28,6 +28,30 @@
 			<key>targetArchitecture</key>
 			<string>arm64</string>
 		</dict>
+		<key>B85C186D-E4BC-4EBA-BA12-6D809617E399</key>
+		<dict>
+			<key>localComputer</key>
+			<dict>
+				<key>busSpeedInMHz</key>
+				<integer>400</integer>
+				<key>cpuCount</key>
+				<integer>1</integer>
+				<key>cpuKind</key>
+				<string>Quad-Core Intel Core i7</string>
+				<key>cpuSpeedInMHz</key>
+				<integer>2300</integer>
+				<key>logicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>modelCode</key>
+				<string>MacBookPro16,2</string>
+				<key>physicalCPUCoresPerPackage</key>
+				<integer>4</integer>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.macosx</string>
+			</dict>
+			<key>targetArchitecture</key>
+			<string>x86_64</string>
+		</dict>
 	</dict>
 </dict>
 </plist>
