--- a/AdventOfCode/AdventOfCode.xcodeproj/xcshareddata/xcbaselines/D536CD11274E25D200D20509.xcbaseline/Info.plist
+++ b/AdventOfCode/AdventOfCode.xcodeproj/xcshareddata/xcbaselines/D536CD11274E25D200D20509.xcbaseline/Info.plist
@@ -4,6 +4,30 @@
 <dict>
 	<key>runDestinationsByUUID</key>
 	<dict>
+		<key>7447653E-F6F3-4F8D-AE0A-57FE092BC391</key>
+		<dict>
+			<key>localComputer</key>
+			<dict>
+				<key>busSpeedInMHz</key>
+				<integer>100</integer>
+				<key>cpuCount</key>
+				<integer>1</integer>
+				<key>cpuKind</key>
+				<string>Unknown</string>
+				<key>cpuSpeedInMHz</key>
+				<integer>2400</integer>
+				<key>logicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>modelCode</key>
+				<string>Macmini9,1</string>
+				<key>physicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.macosx</string>
+			</dict>
+			<key>targetArchitecture</key>
+			<string>x86_64</string>
+		</dict>
 		<key>A01C0788-1FA0-48D7-AC0D-A77B3C6B87DB</key>
 		<dict>
 			<key>localComputer</key>
