--- a/.swiftpm/xcode/xcshareddata/xcschemes/AdventOfCode-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/AdventOfCode-Package.xcscheme
@@ -443,7 +443,7 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
