--- a/.swiftpm/xcode/xcshareddata/xcschemes/AdventOfCode-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/AdventOfCode-Package.xcscheme
@@ -440,10 +440,38 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Year2024"
+               BuildableName = "Year2024"
+               BlueprintName = "Year2024"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Year2025"
+               BuildableName = "Year2025"
+               BlueprintName = "Year2025"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
@@ -565,6 +593,16 @@
                BlueprintIdentifier = "Year2024Tests"
                BuildableName = "Year2024Tests"
                BlueprintName = "Year2024Tests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Year2025Tests"
+               BuildableName = "Year2025Tests"
+               BlueprintName = "Year2025Tests"
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
